# phantomscope

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
app/: dashboard.py
data/mock/: README.md  ct_observations.json  infrastructure_profiles.json
docs/: demo-flow.md  portfolio-copy.md  roadmap.md
docs/screenshots/: README.md
scripts/: demo_interview.sh
src/phantomscope/: __init__.py
src/phantomscope/ai/: __init__.py  service.py
src/phantomscope/api/: dependencies.py  main.py
src/phantomscope/api/routes/: analyses.py  health.py
src/phantomscope/collectors/: __init__.py  ct_logs.py
src/phantomscope/core/: config.py  logging.py
src/phantomscope/db/: repository.py
src/phantomscope/discovery/: domain_variants.py  targets.py
src/phantomscope/enrichment/: __init__.py  service.py
src/phantomscope/models/: schemas.py
src/phantomscope/providers/: base.py  ctlog.py  enrichment.py  http.py  mock_data.py
src/phantomscope/reporting/: exporters.py
src/phantomscope/scoring/: rules.py
src/phantomscope/services/: analysis.py
src/phantomscope/summarization/: service.py
tests/: test_analysis_service.py  test_api.py  test_domain_variants.py  test_schemas.py  test_scoring.py
